sort ausgebessert